fix header z-index

--- a/my-finance-app/src/app/app.component.css
+++ b/my-finance-app/src/app/app.component.css
@@ -61,6 +61,7 @@
   position: sticky;
   top: 0;
   background-color: #25A779;
+  z-index: 1001;
 }
 
 .btn-add {
